fix: panel of pagination overflow - drop

--- a/src/components/others/PaginationElement.css
+++ b/src/components/others/PaginationElement.css
@@ -2,6 +2,7 @@
   /* расширить поле клика */
   padding: 2px; 
 
+  display: inline-block;
   border: none;
   
   background-color: transparent;
