--- a/src/components/others/PaginationPanel.css
+++ b/src/components/others/PaginationPanel.css
@@ -1,6 +1,7 @@
 .PaginationPanel{
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   justify-content: center;
   gap: 40px;
 }
